--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 </head>
-<body>
+<body class="bg-dark">
     
      <!-- navbar start  -->
      <nav class="navbar navbar-expand-lg bg-light">
@@ -53,7 +53,43 @@
         </div>
       </nav>
     <!-- navbar end  -->
-    
+
+
+
+
+    <!-- carousel start  -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/fish1.jpg" class="d-block w-75 mx-auto" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/fish2.jpg" class="d-block w-75 mx-auto" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="images/fish3.jpg" class="d-block w-75 mx-auto" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    <!-- carousel end   -->
+
+
+
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
